se implemento arquitectura base para estilos y archivos multimedia

--- a/biblioteca_app/templates/base.html
+++ b/biblioteca_app/templates/base.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}Tu Biblioteca{% endblock %}</title>
     <link rel="stylesheet" href="{% static 'css/bootstrap/bootstrap.min.css' %}">
+    <link rel="stylesheet" href="{% static 'css/estilos.css' %}">
 </head>
 <body>
 
