--- a/biblioteca_app/templates/libros/lista_libros.html
+++ b/biblioteca_app/templates/libros/lista_libros.html
@@ -1,20 +1,43 @@
-{% extends 'base.html' %}
+{% extends "base.html" %}
+
+{% load static %}
 
 {% block content %}
-<h1>Listado de Libros</h1>
-<div class="row">
-    {% for libro in object_list %}
-    <div class="col-md-4 mb-3">
-        <div class="card">
-            <div class="card-body">
-                <h5 class="card-title">{{ libro.titulo }}</h5>
-                <p class="card-text">Autor: {{ libro.autor }}</p>
-                <p class="card-text">Año de Publicación: {{ libro.año_publicacion }}</p>
-                <p class="card-text">Stock: {{ libro.cantidad_en_stock }}</p>
-                <a href="{% url 'detalle_libro' libro.pk %}" class="btn btn-primary">Ver detalles</a>
+  <h1>Lista de Libros</h1>
+  <div class="row">
+    {% for libro in libros %}
+        <div class="col-md-3">
+            <div class="lista-libro-contenedor-item">
+                <img src="{% static 'img/libro.png' %}">
+                <div class="lista-libro-titulo">{{ libro.titulo }}</div>
+                <div class="lista-libro-autor">{{ libro.autor }} (Publicado en {{ libro.año_publicacion }})</div>
             </div>
         </div>
-    </div>
+        {% if forloop.counter|divisibleby:4 and not forloop.last %}
+            </div><div class="row">
+        {% endif %}
+    {% empty %}
+      <p>No hay libros disponibles.</p>
     {% endfor %}
-</div>
+  </div>
+
+  {% if is_paginated %}
+    <div class="pagination">
+      <span class="step-links">
+        {% if page_obj.has_previous %}
+          <a href="?page=1">&laquo; first</a>
+          <a href="?page={{ page_obj.previous_page_number }}">previous</a>
+        {% endif %}
+
+        <span class="current">
+          Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}.
+        </span>
+
+        {% if page_obj.has_next %}
+          <a href="?page={{ page_obj.next_page_number }}">next</a>
+          <a href="?page={{ page_obj.paginator.num_pages }}">last &raquo;</a>
+        {% endif %}
+      </span>
+    </div>
+  {% endif %}
 {% endblock %}
