--- a/biblioteca_app/templates/libros/editar_libro.html
+++ b/biblioteca_app/templates/libros/editar_libro.html
@@ -2,13 +2,59 @@
 
 {% block content %}
   <h1>Editar Libro</h1>
-  <form method="post">
+  <form action="javascript:editarLibro({{ form.instance.id }})">
       {% csrf_token %}
       {{ form.as_p }}
       <div class="centrar-botones">
         <a href="{% url 'lista_libros' %}" class="btn btn-danger">Volver</a>
         <button class="btn btn-success" type="submit">Actualizar Libro</button>
       </div>
-      
   </form>
+
+  <script type="text/javascript">
+    function editarLibro(id) 
+    {
+      const titulo = document.getElementById('id_titulo').value;
+      const autor = document.getElementById('id_autor').value;
+      const año_publicacion = document.getElementById('id_año_publicacion').value;
+      const cantidad_en_stock = document.getElementById('id_cantidad_en_stock').value;
+
+      //const csrftoken = getCookie('csrftoken');
+      const csrftoken = document.querySelector('[name=csrfmiddlewaretoken]').value;
+
+      fetch('/api/libros/editar/' + id + '/', 
+      {
+        method: 'PUT',
+        headers: 
+        {
+          'Content-Type': 'application/json',
+          'X-CSRFToken': csrftoken
+        },
+        body: JSON.stringify(
+        {
+          titulo: titulo,
+          autor: autor,
+          año_publicacion: año_publicacion,
+          cantidad_en_stock: cantidad_en_stock
+        })
+      })
+      .then(response => 
+      {
+        if (response.ok)
+        {
+          return response.json();
+        }
+        else
+        {
+            throw new Error('Algo salió mal en la API');
+        }
+      })
+      .then(data => 
+      {
+        console.log(data);
+        window.location.href = '/libros/';  // Redirigir a '/libros/' después de una creación exitosa
+      })
+      .catch(error => console.error('Error:', error));
+    }
+  </script>
 {% endblock %}
