--- a/biblioteca_app/templates/index.html
+++ b/biblioteca_app/templates/index.html
@@ -17,7 +17,7 @@
 </head>
 <body>
 
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
   <div class="container">
     <a class="navbar-brand" href="#">Tu Biblioteca</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -26,12 +26,20 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav ml-auto">
         {% if user.is_authenticated %}
-        <li class="nav-item active">
-            <p>Bienvenido, {{ user.username }}! | <a class="nav-link" href="{% url 'logout' %}">Logout</a></p>
+        <li class="nav-item">
+          <a class="nav-link" href="{% url 'lista_libros' %}">Libros</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="{% url 'historial_libro' %}">Historial</a>
+        </li>
+        {% endif %}
+        {% if user.is_authenticated %}
+        <li class="nav-item alinear-derecha">
+          <a class="nav-link" href="{% url 'logout' %}">Logout</a>
         </li>
         {% else %}
-        <li class="nav-item active">
-            <p><a class="nav-link" href="{% url 'login' %}">Login</a></p>
+        <li class="nav-item alinear-derecha">
+          <a class="nav-link" href="{% url 'login' %}">Login</a>
         </li>    
         {% endif %}
       </ul> 
