--- a/biblioteca_app/templates/libros/lista_libros.html
+++ b/biblioteca_app/templates/libros/lista_libros.html
@@ -31,9 +31,13 @@
 
         <div class="centrar-botones">
             <button class="btn btn-danger lista-libro-detalles-cerrar" onclick="closePopover('lista-libro')" title="Cerrar"><i class="fa fa-close"></i></button>
+            {% if user.rol == 'administrador' %}
             <button class="btn btn-danger" id="lista-libro-eliminar" data-id="" onclick="eliminarLibro(this)"><i class="fa fa-trash"></i>&nbsp;&nbsp;Eliminar</button>
+            {% endif %}
             <a href="" id="lista-libro-detalles-prestar" class="btn btn-success"><i class="fa fa-book"></i>&nbsp;&nbsp;Prestar</a>
+            {% if user.rol == 'administrador' %}
             <a href="" id="lista-libro-detalles-editar" class="btn btn-primary"><i class="fa fa-pencil-square"></i>&nbsp;&nbsp;Editar</a>
+            {% endif %}
         </div>
     </div>
 
