--- a/biblioteca_app/templates/base.html
+++ b/biblioteca_app/templates/base.html
@@ -11,6 +11,7 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha256-U3c/OHI6s7A17cS9IwS78hY7e9C/4NQzotwh5f3SAow=" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="{% static 'js/bootstrap/bootstrap.min.js' %}"></script>
+    <script src="{% static 'js/bootstrap/bootstrap.bundle.min.js' %}"></script>
     <link rel="stylesheet" href="{% static 'css/estilos.css' %}">
     <script src="{% static 'js/functions.js' %}"></script>
 </head>
